...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Correo electronico" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PRq-NN-jtF">
                                        <rect key="frame" x="33" y="4" width="292" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTxt"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E2c-eF-Jcr">
                                        <rect key="frame" x="31" y="4" width="294" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTxt">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jFV-0V-taU">
                                <rect key="frame" x="200" y="408.66666666666669" width="161" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="6cN-fb-Uol"/>
...
                                <rect key="frame" x="96.666666666666686" y="485.66666666666669" width="200" height="45.000000000000057"/>
                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="googleBtn">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wjo-Br-L99">
                                <rect key="frame" x="136.66666666666666" y="650" width="119.99999999999997" height="120"/>
                                <accessibility key="accessibilityConfiguration" identifier="faceIdBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="120" id="HXm-iw-oUw"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bhY-iW-2Rn">
                                        <rect key="frame" x="195" y="-9.6666666666666288" width="78" height="32"/>
                                        <accessibility key="accessibilityConfiguration" identifier="registrateBtn"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqG-iG-13Q">
                                <rect key="frame" x="86.666666666666686" y="607" width="220" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="anonymBtn"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Continuar anonimamente.">
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crear cuenta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6rw-Av-6rA">
                                <rect key="frame" x="32" y="123" width="198" height="39"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
...
