...
    var numberPetitions = 0
    
    var search: String?
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Busqueda de libros"
        
        navigationController?.navigationBar.prefersLargeTitles = true
        
        UserDefaults.standard.set(true, forKey: UserDefaultEnum.logedBefore.rawValue)
        
        let signOut = UIBarButtonItem(image: UIImage(systemName: "rectangle.portrait.and.arrow.right.fill"), style: .plain, target: self, action: #selector(closeSession))
        signOut.accessibilityIdentifier = "closeSessionBtn"
        
        self.navigationItem.rightBarButtonItem = signOut
        
        setupUser()
    }
    
...
